# Scrivener-Zotero-sync

./: Non-Fiction with Zotero Final.scrivtemplate  README.md  pyproject.toml  sync-biblio.sh
scriv_sync/: main.py
