[project]
name = "scriv-sync"
version = "1.1.0"
description = "Sync your Scrivener project with Zotero and Pandoc, generating citekeys.md"
authors = [{ name = "Chantal Schouwenaar", email = "YOUR EMAIL HERE" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bibtexparser>=2.0"
]

[project.scripts]
scriv-sync = "scriv_sync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scriv_sync"]
